--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -1,10 +1,34 @@
-<p style="color: green"><%= notice %></p>
-
-<%= render @room %>
-
 <div>
-  <%= link_to "Edit this room", edit_room_path(@room) %> |
-  <%= link_to "Back to rooms", rooms_path %>
+  <% if notice %>
+    <div class="my-2 alert alert-success"><%= notice %></div>
+  <% end %>
 
-  <%= button_to "Destroy this room", @room, method: :delete %>
+  <main class="my-2">
+    <div class="p-2">
+      <h1><%= @room.name %></h1>
+      <p><%= @room.description %></p>
+      <p class="text-end blockquote-footer">By: <%= @room.owner&.name %></p>
+    </div>
+    <div class="p-4 bg-light rounded-3">
+      現在待機中の人数:
+      <span class="display-3 mx-3"><%= @room.tickets.size %></span>
+
+      <% if @position > 0 %>
+        <div class="alert alert-success">
+          あなたは現在: <strong><%= @position %></strong> 番目
+        </div>
+      <% else %>
+        <%= button_to "参加登録", { action: "apply" }, { class: "btn btn-primary btn-lg mx-auto" } %>
+      <% end %>
+    </div>
+  </main>
+
+  <div class="my-2 p-4 bg-dark text-white rounded-3">
+    <p>Admin menu</p>
+    <%= button_to "Next", action: "next" %>
+    <%= link_to "Edit this room", edit_room_path(@room) %> |
+    <%= link_to "Back to rooms", rooms_path %>
+
+    <%= button_to "Destroy this room", @room, method: :delete %>
+  </div>
 </div>
