--- a/app/views/rooms/_room.html.erb
+++ b/app/views/rooms/_room.html.erb
@@ -16,11 +16,7 @@
 
   <div>
     <strong>Waiting:</strong>
-    <ol>
-      <% room.tickets.each do |t| %>
-        <li><%= t.id %></li>
-      <% end %>
-    </ol>
+    <%= room.tickets.alive.size %>
   </div>
 
 </div>
