--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,10 +9,27 @@
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <%= javascript_importmap_tags %>
   </head>
 
   <body>
-    <div>
+    <header class="nav bg-light border-bottom px-4 py-2 d-flex">
+      <div>
+        <span class="fw-bold">Liquid</span> <span class="text-muted"> | Match queuing system</span>
+      </div>
+      <% if user_signed_in? %>
+        <div class="ms-auto">
+          <%= current_user.name %>
+          <%= link_to "Logout", destroy_user_session_path, method: :delete %>
+        </div>
+      <% else %>
+        <div class="ms-auto">
+          <%= link_to "Login", new_user_session_path %>
+        </div>
+      <% end %>
+    </header>
+    <div class="container">
+    
       <%= yield %>
     </div>
   </body>
