--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,9 +18,9 @@
         <span class="fw-bold">Liquid</span> <span class="text-muted"> | Match queuing system</span>
       </div>
       <% if user_signed_in? %>
-        <div class="ms-auto">
+        <div class="ms-auto d-flex">
           <%= current_user.name %>
-          <%= link_to "Logout", destroy_user_session_path, method: :delete %>
+          <%= button_to "Logout", destroy_user_session_path, method: :delete, class: "btn btn-link" %>
         </div>
       <% else %>
         <div class="ms-auto">
@@ -29,7 +29,9 @@
       <% end %>
     </header>
     <div class="container">
-    
+      <% if notice %>
+        <div class="my-2 alert alert-success"><%= notice %></div>
+      <% end %>
       <%= yield %>
     </div>
   </body>
