--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -1,16 +1,16 @@
-<%= turbo_frame_tag dom_id(@room) do %>
+<%= turbo_frame_tag "room" do %>
 <div>
-
-  <% if notice %>
-    <div class="my-2 alert alert-success"><%= notice %></div>
-  <% end %>
-
   <main class="my-2">
     <div class="p-2">
       <h1><%= @room.name %></h1>
       <p><%= @room.description %></p>
       <p class="text-end blockquote-footer">By: <%= @room.owner&.name %></p>
     </div>
+    <% if @position == 0 %>
+      <div class="alert alert-danger display-2">
+        あなたの番です！
+      </div>
+    <% end %>
     <div class="p-4 <%= @position > 0 ? "bg-success" : "bg-primary" %> text-white rounded-3">
       現在待機中の人数:
       <span class="display-3 mx-3"><%= @room.tickets.size %></span>
@@ -65,3 +65,9 @@
   </div>
 </div>
 <% end %>
+
+<script>
+setInterval(() => {
+  document.querySelector('#room').reload()
+}, 10000);
+</script>
