--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
 
   <body>
     <header class="nav bg-light border-bottom px-4 py-2 d-flex">
-      <div>
+      <div style="cursor: pointer;" onclick="location.href = '/'">
         <span class="fw-bold">Liquid</span> <span class="text-muted"> | Match queuing system</span>
       </div>
       <% if user_signed_in? %>
